<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/record_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/record_added"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_love"
        android:layout_width="133dp"
        android:layout_height="86dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorLove"
        android:onClick="addComment"
        android:text="@string/button_love"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_surprise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_joy"
        android:layout_width="133dp"
        android:layout_height="86dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorJoy"
        android:onClick="addComment"
        android:text="@string/button_joy"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_anger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_love"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_surprise"
        android:layout_width="133dp"
        android:layout_height="86dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:background="@color/colorSurprise"
        android:onClick="addComment"
        android:text="@string/button_surprise"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sadness"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_anger"
        android:layout_width="133dp"
        android:layout_height="86dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAnger"
        android:onClick="addComment"
        android:text="@string/button_anger"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_fear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_surprise" />

    <Button
        android:id="@+id/button_sadness"
        android:layout_width="133dp"
        android:layout_height="86dp"
        android:layout_marginBottom="148dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:background="@color/colorSadness"
        android:onClick="addComment"
        android:text="@string/button_sadness"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_fear"
        android:layout_width="133dp"
        android:layout_height="86dp"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorFear"
        android:onClick="addComment"
        android:text="@string/button_fear"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_sadness" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="111dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:onClick="viewCount"
        android:text="@string/button_count"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/record_added"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="111dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:onClick="viewHistory"
        android:text="@string/button_history"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/record_added" />
</android.support.constraint.ConstraintLayout>
